--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ executing==0.8.2
 Flask==2.1.2
 fonttools==4.28.5
 future==0.18.2
+gunicorn==20.1.0
 h11==0.13.0
 idna==3.3
 iniconfig==1.1.1
@@ -89,6 +90,7 @@ PySocks==1.7.1
 pytest==6.2.5
 python-dateutil==2.8.2
 pytz==2021.3
+pywinpty==1.1.6
 pyzmq==22.3.0
 regex==2021.11.10
 requests==2.26.0
