--- a/requirements.txt
+++ b/requirements.txt
@@ -27,11 +27,13 @@ executing==0.8.2
 Flask==2.1.2
 fonttools==4.28.5
 future==0.18.2
+gevent==22.10.2
+greenlet==2.0.2
 gunicorn==20.1.0
 h11==0.13.0
 idna==3.3
 iniconfig==1.1.1
-install==1.3.5 
+install==1.3.5
 ipykernel==6.7.0
 ipython==8.0.0
 ipython-genutils==0.2.0
@@ -124,3 +126,5 @@ webencodings==0.5.1
 websocket-client==1.2.3
 Werkzeug==2.0.2
 wsproto==1.0.0
+zope.event==4.6
+zope.interface==5.5.2
